--- a/week08_i32vv1/week08_i32vv1/week08_i32vv1.csproj
+++ b/week08_i32vv1/week08_i32vv1/week08_i32vv1.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstractions\IToyFactory.cs" />
     <Compile Include="Abstractions\Toy.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -53,6 +54,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="BallFactory.cs" />
+    <Compile Include="Entities\Car.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
