--- a/UnitTestExample/UnitTestExample/UnitTestExample.csproj
+++ b/UnitTestExample/UnitTestExample/UnitTestExample.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstractions\IAccountManager.cs" />
+    <Compile Include="AccountControllerTestFixture.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Entities\Account.cs" />
     <Compile Include="Form1.cs">
